short-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-ingress
  namespace: stpk-short
  annotations: 
    nginx.ingress.kubernetes.io/add-base-url: "true"
  labels:
    name: short-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: short-api-clusterip
            port: 
              number: 3000
